# avalon

./: CMakeCache.txt  CMakeLists.txt  Grid2D.h  Grid3D.h  GridDimension.h  GridTypes.h  Makefile  Mapnode.cpp  Mapnode.h  Oceanmap2d.cpp  RudderMotor.cpp  RudderMotor.h  Rudderstate.h  SailMotor.cpp  SailMotor.h  Sailstate.h  Ship.cpp  Ship.h  StatusSender.py  ais.cpp  ais.h  aisEval  aisEval.cpp  aisEval.h  aisFunction.h  all_launch.sh  aut_nav.py  avalon.h  boatpos.txt  bubble_sort.cpp  bubble_sort.h  checkmails.py  cmake_install.cmake  coord_transform.h  ddxlog_keepalive.sh  desired_course.h  destination.h  destination.txt  destination2.txt  destination_N_Square_2200.txt  (+113 more)
can_library/: Makefile  can_serial.c  can_serial.h
cmt/: CMakeLists.txt  Makefile
communication/MessageManager/: Doxyfile  MessageServer.cpp  MessageServer.h  Server.cpp  Server.h  logstream.cpp  logstream.h  main.cpp
communication/platform/: Curl.cpp  Curl.h  DataLogger.cpp  DataLogger.h  DataSource.cpp  DataSource.h  Doxyfile  ElectricalSource.cpp  ElectricalSource.h  EnvironmentSource.cpp  EnvironmentSource.h  EthernetHandler.h  Exception.cpp  Exception.h  GPIO.cpp  GPIO.h  GPRSHandler.cpp  GPRSHandler.h  GPSSource.cpp  GPSSource.h  IridiumHandler.cpp  IridiumHandler.h  Log.cpp  Log.h  Logstream.cpp  Logstream.h  Makefile.am  MessageHandler.h  MessageManager.cpp  MessageManager.h  MessageServer.cpp  MessageServer.h  PPPHandler.cpp  PPPHandler.h  PictureSource.cpp  PictureSource.h  PowerManager.cpp  PowerManager.h  SMS.cpp  SMS.h  (+21 more)
communication/platform/configlib/: Makefile.am  configfile.cpp  configitem.h
communication/platform/test/: CurlTester.cpp  CurlTester.h  DataSourceTester.cpp  DataSourceTester.h  ElectricalTester.cpp  ElectricalTester.h  EthernetTester.cpp  EthernetTester.h  GPIOTester.cpp  GPIOTester.h  GPSTester.cpp  GPSTester.h  MessageManagerTester.cpp  MessageManagerTester.h  MessageServerTester.cpp  MessageServerTester.h  PPPHandlerTester.cpp  PPPHandlerTester.h  SMSTester.cpp  SMSTester.h  SerialTester.cpp  SerialTester.h  SharedMemoryTester.cpp  SharedMemoryTester.h  Tester.cpp  Tester.h
communication/scripts/cpc/: kermit-setup-gumstix  serial
communication/scripts/gumstix/: commer  ip-down  ip-up  kermit-setup-iridium
communication/scripts/udev/: query
documentation/: controlplot.plt  ddx_setup.txt  eposlib_setup.txt  gnuplot_commands.txt  joystickbuttons.txt  mainpc_changelog.txt  remotecontrol-checklist.txt  waypoints.plt
eposlib/: CMakeLists.txt  Makefile  install_manifest.txt
eposlib-test/: Makefile  can.h  epos.c  epos.h
eposlib/can/: CMakeLists.txt  Makefile  can.h  cmake_install.cmake
eposlib/can-cpc/: CMakeLists.txt  can_cpc.c  can_cpc.h
eposlib/can-serial/: CMakeLists.txt  Makefile  can_serial.c  can_serial.h  cmake_install.cmake  tags
eposlib/controller/: Makefile  controller.c  controller.h  epos-example.c  era.c  era.h  motors.c  motors.h  sensors.c  sensors.h  thread.c  thread.h  timer.c  timer.h
eposlib/cpc-usb/: CMakeLists.txt  Config  Makefile  cpc_async.c  cpc_common.h  cpc_usb.c  cpclib.c  cpclib.h  ethercan.c  ini_parser.c
eposlib/epos/: CMakeLists.txt  Makefile  cmake_install.cmake  epos.c  epos.h
eposlib/example/: CMakeLists.txt  Makefile  Motor.cpp  Motor.h  cmake_install.cmake  main.cpp  rudder-target.h
gui/: gui.py  original_gui.py  plotgui.py  setup.txt
gui/pics/: red2.xcf
include/: CGnuplot.h  can.h  can_serial.h  ddxjoystick.h  epos.h
kmodule/: Makefile  sht1x.c
matlab_091217/: AisBoats.m  GpsSignal.m  ImuSignal.m  PID_ctrl_call.m  PoseStep.m  PoseStep_shell.m  ais_codes.m  avalonGui.asv  avalonGui.fig  avalonGui.m  avalonGuiWaypoints.fig  avalonGuiWaypoints.m  c_sail_lift_plot.m  ddx_close.m  ddx_init.m  ddx_read.m  ddx_read_g.m  ddx_read_shell.m  ddx_read_shell2.m  ddx_write.m  ddx_write_g.m  ddx_write_shell.m  ecef2lla.m  f0_45.m  f0_45_min_max.m  forceTest.m  forceTestRudder.m  joysticktest.m  ll2xy.m  lla2ecef.m  llh2xyz.m  parameter.m  parameter_shell.m  pathdef.m  pid_ctrl.m  point2boat.m  reminderRad.m  rudderUpdate.m  rudder_heading.fig  rudder_heading2.fig  (+19 more)
matlab_091217/Dijkstra/: dijkstra.m  dijkstra_stub1.m
matlab_091217/Wind Wave/: tester3.m  waveProfile.m  wind_rose.m  windfeld.fig  windfeld.m  windprofile.fig  windstaerke.m  windtest.m
package-sources/: CGnuplot.tgz  eposlib.tgz
ram_paper_ssa/: Makefile  ReportOn09-0050v1.txt  Review1425(Reviewer5)Of09-0050v1.txt  Review1426(Reviewer6)Of09-0050v1.txt  Review1434(Reviewer7)Of09-0050v1.txt  authors_response.txt  cp_paper_structure.txt  he_ram_paper_ssa.kilepr  ram_paper_ssa.aux  ram_paper_ssa.bbl  ram_paper_ssa.bib  ram_paper_ssa.blg  ram_paper_ssa.tex
ram_paper_ssa/includes/: conclusion.tex  introduction.tex  nav_strategy.tex  navigator.tex  sailor.tex  timetable.tex
ram_paper_ssa/pics/: paper_downwind.eps  paper_kreuzen.eps
seekarten/: zh_normal_gs20  zh_wall1_gs20  zh_wall2_gs20  zh_wall3_gs20
