# Indicate this is not a GNU project and that
# missing files should be automatically created
AUTOMAKE_OPTIONS=foreign

# Global C Flags
AM_CPPFLAGS = -g -Wall

# configuration library
noinst_LIBRARIES = libconfiglib.a
libconfiglib_a_SOURCES = color.cpp configfile.cpp configitem_base.cpp ipaddress.cpp

